k8s/demo-observer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-observer
  namespace: ibac
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-observer
  template:
    metadata:
      labels:
        app: demo-observer
    spec:
      containers:
      - name: demo-observer
        image: localhost/ibac-observer:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 7070
---
apiVersion: v1
kind: Service
metadata:
  name: demo-observer
  namespace: ibac
spec:
  type: NodePort
  selector:
    app: demo-observer
  ports:
  - port: 7070
    targetPort: 7070
    nodePort: 30070
    name: http
