k8s/email-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-server
  namespace: ibac
spec:
  replicas: 1
  selector:
    matchLabels:
      app: email-server
  template:
    metadata:
      labels:
        app: email-server
    spec:
      containers:
      - name: email-server
        image: localhost/ibac-email-server:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8888
        env:
        - name: EXFIL_URL
          value: "http://evil-server.ibac.svc.cluster.local:9999"
---
apiVersion: v1
kind: Service
metadata:
  name: email-server
  namespace: ibac
spec:
  type: NodePort
  selector:
    app: email-server
  ports:
  - port: 8888
    targetPort: 8888
    nodePort: 30888
