k8s/sparc-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sparc-reflector
  namespace: ibac
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sparc-reflector
  template:
    metadata:
      labels:
        app: sparc-reflector
    spec:
      containers:
      - name: sparc-reflector
        image: localhost/ibac-sparc-reflector:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8090
          name: http
        env:
        - name: PORT
          value: "8090"
        - name: OBSERVER_URL
          value: "http://demo-observer.ibac.svc.cluster.local:7070"
        - name: SPARC_RELAY_MODE
          value: "true"
        - name: SPARC_RELAY_TIMEOUT
          value: "300"
---
apiVersion: v1
kind: Service
metadata:
  name: sparc-reflector
  namespace: ibac
spec:
  selector:
    app: sparc-reflector
  ports:
  - port: 8090
    targetPort: 8090
    name: http
