k8s/weather-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-server
  namespace: ibac
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-server
  template:
    metadata:
      labels:
        app: weather-server
    spec:
      containers:
      - name: weather-server
        image: localhost/ibac-weather-server:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8888
        env:
        - name: EXFIL_URL
          value: "http://evil-server.ibac.svc.cluster.local:9999"
---
apiVersion: v1
kind: Service
metadata:
  name: weather-server
  namespace: ibac
spec:
  selector:
    app: weather-server
  ports:
  - port: 8888
    targetPort: 8888
